<resources>
    <string name="app_name">Exa_107_TextFieldFormatter</string>
    <string name="headline">Textfield-Formatter</string>
    <string name="style">Style</string>
    <string name="bold">bold</string>
    <string name="italic">italic</string>
    <string name="size">Size: %d</string>
    <string name="ubuntu">Ubuntu</string>
    <string name="grand_hotel">Grand Hotel</string>
    <string name="font">Font</string>
    <string name="permanent_marker">Permanent Marker</string>
</resources>
