<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/tvHeadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/headline"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textSize="35sp"
        android:paddingVertical="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="5"
        android:inputType="textMultiLine"
        android:maxLines="5"
        android:fontFamily="@font/ubuntu"
        android:layout_marginBottom="24dp"
        android:layout_below="@id/tvHeadline"/>
    <TableLayout
        android:id="@+id/llTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etInput">
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/style"
                android:gravity="fill"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:textSize="20sp"/>
            <CheckBox
                android:id="@+id/cbBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bold"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:buttonTint="@color/orange"/>
            <CheckBox
                android:id="@+id/cbItalic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/italic"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:buttonTint="@color/orange"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp">
            <TextView
                android:id="@+id/tvSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size"
                android:gravity="fill"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:textSize="20sp"/>
            <SeekBar
                android:id="@+id/sbSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:thumbTint="@color/orange"
                android:paddingTop="10dp"
                android:min="12"
                android:max="36"
                android:progress="1"
                android:progressTint="@color/orange"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvFont"
                android:paddingTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/font"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:orientation="vertical">
                <RadioGroup
                    android:id="@+id/rgFont"
                    android:paddingTop="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/rbUbuntu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/orange"
                        android:text="@string/ubuntu"
                        android:textSize="20sp"
                        android:checked="true"
                        android:fontFamily="@font/ubuntu"/>
                    <RadioButton
                        android:id="@+id/rbGrandHotel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/orange"
                        android:paddingTop="10dp"
                        android:text="@string/grand_hotel"
                        android:textSize="20sp"
                        android:fontFamily="@font/grand_hotel_regular"/>
                    <RadioButton
                        android:id="@+id/rbPermanentMarker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/orange"
                        android:text="@string/permanent_marker"
                        android:paddingTop="10dp"
                        android:textSize="12sp"
                        android:fontFamily="@font/permanent_marker"/>
                </RadioGroup>
            </LinearLayout>
        </TableRow>
    </TableLayout>
</RelativeLayout>